--- a/woz.html
+++ b/woz.html
@@ -64,11 +64,7 @@
                         Steve Wozniak nasceu e cresceu em San José, na Califórnia. Sua mãe, Margaret Louise
                         Wozniak, queria que o filho fosse registrado como Stephen. Mas, por um erro, sua certidão
                         de nascimento foi registrada com o nome de Stephan Gary Wozniak. Em homenagem ao
-                        desejo da mãe, ele adotou a grafia. Woz afirma que também deve a ela seu senso de humor
-                        peculiar. Steve, o primogênito, e seus irmãos cresceram sem conhecer detalhes sobre o
-                        trabalho do pai, Francis Jacob “Jerry” Wozniak. Na família, era proibido perguntar sobre o
-                        emprego do patriarca que, anos antes, havia atuado como jogador de futebol americano,
-                        com relativo sucesso.
+                        desejo da mãe, ele adotou a grafia.
                     </div>
                 </div>
 
@@ -100,8 +96,6 @@
                         Woz também fundou a Wheels of Zeus (WOZ) em 2001, com o objetivo de criar tecnologia GPS para facilitar a vida das pessoas. Em 2017, ele criou a Woz U, uma plataforma educacional focada no ensino de tecnologia e engenharia de software.
                         Além disso, Wozniak dedicou-se a várias causas educacionais e sociais. Ele foi um dos fundadores do Tech Museum e do Children’s Discovery Museum, em San José, e apoiou a criação da Electronic Frontier Foundation, que luta pelos direitos digitais. 
                         Ele também se envolveu em festivais de música e projetos educacionais através de sua fundação Unite Us In Song.
-                        Apesar de ter se afastado da Apple por não concordar com a direção que a empresa estava tomando, sua relação com a companhia nunca foi cortada completamente. 
-                        Wozniak ainda recebe um salário simbólico da Apple e continua sendo uma figura importante no ecossistema tecnológico.
                     </div>
                 </div>
             </div>
