--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                 <div class="item">
                     <img src="img/ingles.png" alt="power bi">
-                    <a href="path/to/your/file.ext">
+                    <a href="glossario.html">
                         <button type="button">Ver mais</button>
                     </a>
                 </div>
